--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -16,7 +16,7 @@
 
 		<footer class="blog-footer">
 			<p>
-			  <?php echo $this->tag->linkTo(array("/", "Главная")) ?> / <?php echo $this->tag->linkTo(array("messages/index", "Сообщения")) ?> / <?php echo $this->tag->linkTo(array("messages/new", "Добавить", 'class'=>'create-msg', 'data-toggle'=>"modal", 'data-target'=>"#messageModal")) ?>
+			  <?php echo $this->tag->linkTo(array("/", "Главная")) ?> / <?php echo $this->tag->linkTo(array("messages/index", "Сообщения")) ?>
 			</p>
 		</footer>
 
