--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,3 +1,3 @@
 <div class="page-header">
-    <h1><?php echo $this->tag->linkTo(array("messages/search", "Сообщения")) ?></h1>
+    <h1><?php echo $this->tag->linkTo(array("messages/index", "Сообщения")) ?></h1>
 </div>
