--- a/app/views/messages/index.phtml
+++ b/app/views/messages/index.phtml
@@ -2,19 +2,28 @@
 /**
  * @var \Phalcon\Mvc\View\Engine\Php $this
  */
+
 ?>
 
 <?php use Phalcon\Tag; ?>
 
 <div class="page-header">
-    <h1>Сообщения</h1>
+	<h1>Сообщения</h1>
+</div>
+
+<div class="row">
+    <nav>
+        <ul class="pager">
+            <li class="next"><?php echo $this->tag->linkTo(array("messages/new", "Добавить", 'class'=>'create-msg', 'data-toggle'=>"modal", 'data-target'=>"#messageModal")) ?></li>
+        </ul>
+    </nav>
 </div>
 
 <div class="well well-sm">
 	<?php
 		echo $this->tag->form(
 			array(
-				"messages/search",
+				"messages/index",
 				"autocomplete" => "off",
 				"class" => "form-vertical",
 				"id" => "form-search"
@@ -48,6 +57,13 @@
 			<?php echo $this->tag->linkTo(array("messages/index", "Reset", "class" => "btn btn-default", "type"=>"reset")) ?>
 			<?php echo $this->tag->submitButton(array("Search", "class" => "btn btn-primary")) ?>
 		</div>
+
+		<div class="form-group col-sm-5">
+			<label for="fieldSort" class="col-sm-4 control-label">Сортировка</label>
+			<div class="col-sm-8">
+				<?php echo $this->tag->select(array("sort", "class" => "form-control", "id" => "fieldSortable"), $grid->getSortableFields()) ?>
+			</div>
+		</div>
 	</div>
 
 	<?php echo $this->tag->endForm(); ?>
@@ -59,6 +75,7 @@
 	<?php echo $this->getContent(); ?>
 </div>
 
+<?php if(isset($page)): ?>
 <div class="row">
     <table class="table table-bordered" id="gridview">
         <thead>
@@ -78,11 +95,11 @@
         <?php foreach ($page->items as $message): ?>
             <tr>
                 <td><?php echo $message->id ?></td>
-            <td><?php echo $message->name ?></td>
-            <td><?php echo $message->phone ?></td>
-            <td><?php echo $message->email ?></td>
-            <td><?php echo $message->message ?></td>
-            <td><?php echo $message->created ?></td>
+				<td><?php echo $message->name ?></td>
+				<td><?php echo $message->phone ?></td>
+				<td><?php echo $message->email ?></td>
+				<td><?php echo $message->message ?></td>
+				<td><?php echo $message->created ?></td>
 
                 <td><?php echo $this->tag->linkTo(array("messages/edit/" . $message->id, "Edit", "class"=>"edit-msg")); ?></td>
                 <td><?php echo $this->tag->linkTo(array("messages/delete/" . $message->id, "Delete", "class"=>"del-btn")); ?></td>
@@ -95,19 +112,26 @@
 <div class="row">
     <div class="col-sm-1">
         <p class="pagination" style="line-height: 1.42857;padding: 6px 12px;">
-            <?php echo $page->current, "/", $page->total_pages ?>
+            Страница <?php echo $page->current, "/", $page->total_pages ?>
         </p>
     </div>
-	<?php if($page->current!==$page->total_pages): ?>
     <div class="col-sm-11">
         <nav>
             <ul class="pagination">
-                <li><?php echo $this->tag->linkTo("messages/search", "First") ?></li>
-                <li><?php echo $this->tag->linkTo("messages/search?page=" . $page->before, "Previous") ?></li>
-                <li><?php echo $this->tag->linkTo("messages/search?page=" . $page->next, "Next") ?></li>
-                <li><?php echo $this->tag->linkTo("messages/search?page=" . $page->last, "Last") ?></li>
+				<?php if($page->current<>1): ?>
+                <li><?php echo $this->tag->linkTo("messages/index", "First") ?></li>
+				<?php endif; ?>
+				<?php if($page->current<>$page->before): ?>
+                <li><?php echo $this->tag->linkTo("messages/index?page=" . $page->before, "Previous") ?></li>
+				<?php endif; ?>
+				<?php if($page->current<>$page->next): ?>
+                <li><?php echo $this->tag->linkTo("messages/index?page=" . $page->next, "Next") ?></li>
+				<?php endif; ?>
+				<?php if($page->current<>$page->last): ?>
+                <li><?php echo $this->tag->linkTo("messages/index?page=" . $page->last, "Last") ?></li>
+				<?php endif; ?>
             </ul>
         </nav>
     </div>
-	<?php endif; ?>
 </div>
+<?php endif; ?>
